--- a/main.ipynb
+++ b/main.ipynb
@@ -1351,6 +1351,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import KNNImputer\n",
+    "\n",
+    "imputer = KNNImputer(n_neighbors=5)\n",
+    "data[['Insulin']] = imputer.fit_transform(data[['Insulin']])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 235,
    "metadata": {},
    "outputs": [
