--- a/clean_insulin.ipynb
+++ b/clean_insulin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "(85, 9)"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "(768, 9)"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "7                     0.134   29        0  "
       ]
      },
-     "execution_count": 294,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,27 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(394, 4)"
-      ]
-     },
-     "execution_count": 295,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +272,7 @@
        "(394, 9)"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +283,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(394, 9)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "0"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "13                     0.398   59        1  "
       ]
      },
-     "execution_count": 299,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,14 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 89.38544556962026\n"
+      "Mean Squared Error: 90.80256835443038\n"
      ]
     }
    ],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 324 candidates, totalling 1620 fits\n",
-      "Mean Squared Error (MSE): 79.5894835443038\n"
+      "Mean Squared Error (MSE): 78.51740126582278\n"
      ]
     },
     {
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,63 +867,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([45.3 , 34.02, 41.04, 30.56, 32.38, 33.08, 29.96, 37.24, 32.22,\n",
-       "       38.44, 30.22, 29.82, 34.2 , 33.32, 39.26, 33.32, 30.54, 29.5 ,\n",
-       "       31.78, 36.58, 35.12, 27.64, 33.64, 30.2 , 42.4 , 35.66, 43.12,\n",
-       "       35.62, 30.38, 30.86, 26.14, 36.74, 36.14, 33.88, 32.06, 32.44,\n",
-       "       38.36, 30.18, 26.74, 33.06, 35.8 , 30.04, 37.74, 29.  , 34.88,\n",
-       "       30.52, 27.16, 35.66, 27.22, 30.9 , 28.8 , 28.78, 28.18, 26.92,\n",
-       "       43.48, 41.48, 39.82, 27.38, 28.18, 26.6 , 31.88, 41.56, 32.  ,\n",
-       "       33.24, 37.84, 29.62, 30.36, 28.56, 32.22, 31.58, 27.26, 33.14,\n",
-       "       31.28, 29.52, 29.88, 36.62, 37.6 , 47.4 , 33.92, 30.76, 30.14,\n",
-       "       29.9 , 41.94, 38.46, 35.02, 42.38, 33.86, 32.2 , 36.92, 35.54,\n",
-       "       36.26, 33.76, 33.34, 26.76, 33.5 , 34.5 , 35.5 , 26.52, 40.34,\n",
-       "       30.9 , 25.72, 27.42, 32.22, 36.56, 30.42, 24.48, 39.1 , 37.58,\n",
-       "       35.  , 36.52, 39.32, 35.62, 29.46, 40.36, 30.82, 35.36, 39.98,\n",
-       "       36.78, 33.62, 39.78, 36.7 , 45.94, 32.4 , 37.26, 35.72, 39.72,\n",
-       "       34.58, 31.74, 30.92, 32.84, 29.18, 30.3 , 31.74, 34.38, 39.02,\n",
-       "       39.76, 39.12, 34.74, 40.02, 33.4 , 29.58, 39.02, 30.64, 26.82,\n",
-       "       26.88, 28.78, 30.42, 37.38, 43.68, 29.84, 42.88, 25.6 , 46.48,\n",
-       "       28.68, 43.36, 31.48, 30.6 , 41.78, 42.84, 34.12, 32.04, 32.16,\n",
-       "       37.34, 28.86, 38.46, 28.82, 35.24, 31.9 , 33.58, 34.22, 32.76,\n",
-       "       30.36, 27.4 , 35.16, 27.04, 36.12, 33.76, 26.16, 45.98, 33.68,\n",
-       "       41.3 , 30.38, 37.12, 32.48, 28.2 , 30.38, 31.66, 33.32, 26.4 ,\n",
-       "       31.5 , 40.34, 34.24, 27.26, 36.98, 39.94, 30.26, 37.32, 41.96,\n",
-       "       33.8 , 28.48, 43.06, 33.06, 34.6 , 37.54, 28.48, 32.7 , 39.32,\n",
-       "       26.66, 35.72, 25.52, 34.46, 38.12, 43.74, 28.82, 29.26, 37.4 ,\n",
-       "       31.52, 31.68, 35.16, 36.36, 43.5 , 33.78, 27.28, 34.56, 26.56,\n",
-       "       34.36, 37.02, 33.56, 33.38, 36.72, 33.78, 35.42, 35.04, 34.68,\n",
-       "       37.72, 31.48, 43.06, 33.94, 37.1 , 35.8 , 46.4 , 29.1 , 29.24,\n",
-       "       33.86, 29.98, 31.18, 32.42, 35.8 , 25.  , 33.94, 32.94, 34.54,\n",
-       "       32.16, 32.9 , 35.  , 27.88, 26.2 , 29.26, 37.06, 33.88, 30.62,\n",
-       "       27.18, 29.88, 39.76, 31.16, 32.86, 29.38, 32.58, 30.58, 35.84,\n",
-       "       33.64, 36.  , 34.86, 26.02, 28.58, 30.94, 37.58, 34.56, 29.62,\n",
-       "       29.22, 29.  , 26.02, 44.02, 26.76, 26.96, 29.58, 35.6 , 32.1 ,\n",
-       "       36.02, 29.84, 26.24, 36.26, 41.5 , 35.02, 29.92, 29.6 , 34.94,\n",
-       "       33.26, 32.82, 26.9 , 36.88, 31.52, 31.98, 34.76, 35.12, 31.  ,\n",
-       "       30.6 , 29.46, 34.02, 35.38, 38.3 , 33.98, 44.04, 35.38, 28.82,\n",
-       "       30.92, 32.22, 44.42, 37.74, 31.42, 42.58, 31.22, 31.48, 29.16,\n",
-       "       38.66, 41.22, 28.64, 35.32, 29.52, 32.38, 35.92, 25.48, 31.98,\n",
-       "       27.92, 33.  , 25.1 , 31.44, 30.6 , 31.82, 42.88, 33.18, 28.24,\n",
-       "       32.58, 44.12, 34.08, 35.06, 27.1 , 30.64, 35.7 , 32.84, 31.1 ,\n",
-       "       36.84, 37.76, 41.48, 36.56, 31.82, 30.1 , 38.76, 30.14, 35.5 ,\n",
-       "       31.72, 44.12, 37.04, 28.8 , 39.7 , 35.6 , 35.36, 27.68, 34.28,\n",
-       "       38.7 , 25.9 , 36.1 , 32.94, 38.98])"
+       "24.92"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "insulin_pre"
+    "insulin_pre.min()"
    ]
   },
   {
